<resources>
    <string name="app_name">UTeSocial</string>
    <string name="des_act_main_fab_create">Tạo bài viết mới</string>
    <string name="des_act_main_top_sb_avatar">Mở giao diện tài khoản</string>
    <string name="des_fra_notification_tl">Hiển thị thông báo và yêu cầu bạn bè</string>
    <string name="des_fra_post_info_btn_back">Trở lại giao diện trước</string>
    <string name="des_fra_post_info_btn_menu">Mở menu thao tác với bài viết</string>
    <string name="des_ite_fra_notify_btn_menu">Mở menu tùy chọn thông báo</string>
    <string name="des_ite_fra_request_btn_accept">Chấp nhận yêu cầu kết bạn</string>
    <string name="des_ite_fra_request_btn_denied">Từ chối yêu cầu kết bạn</string>
    <string name="des_ite_fra_request_rv_friend">Danh sách bạn bè chung</string>
    <string name="des_ite_post_info_btn_menu">Mở menu thao tác với bài viết</string>
    <string name="des_ite_post_interact_btn_comment">Bình luận vào bài viết</string>
    <string name="des_ite_post_interact_btn_like">Thích bài viết</string>
    <string name="des_placeholder">Chế độ xem mô tả dữ liệu đang được tải</string>
    <string name="str_act_login_btn_forgot">Quên mật khẩu?</string>
    <string name="str_act_login_btn_login">Đăng nhập</string>
    <string name="str_act_login_btn_register">Đăng ký</string>
    <string name="str_act_login_til_email_hint">Email</string>
    <string name="str_act_login_til_password_hint">Mật khẩu</string>
    <string name="str_act_main_bottom_bnv_item">•</string>
    <string name="str_act_main_top_tv_hint">Tìm kiếm người dùng</string>
    <string name="str_bs_notify_btn_delete">Gỡ bỏ thông báo này</string>
    <string name="str_bs_notify_btn_mark">Đánh dấu là đã đọc</string>
    <string name="str_fra_community_tv_empty">Không có bài viết đề xuất</string>
    <string name="str_fra_create_post_info_tv_title">Tạo bài viết</string>
    <string name="str_fra_home_tv_empty">Không có bài viết đề xuất</string>
    <string name="str_fra_notification_tab_title_notify">Thông báo</string>
    <string name="str_fra_notification_tab_title_request">Yêu cầu</string>
    <string name="str_fra_notify_tv_empty">Không có thông báo</string>
    <string name="str_fra_post_btn_menu_remove">Xóa bài viết</string>
    <string name="str_fra_post_btn_menu_report">Báo cáo vi phạm</string>
    <string name="str_fra_post_info_tv_title">Chi tiết bài viết</string>
    <string name="str_fra_register_content_candidate_til_identity_hint">Mã thí sinh</string>
    <string name="str_fra_register_content_candidate_til_major_hint">Ngành đăng ký</string>
    <string name="str_fra_register_content_candidate_til_school_hint">Trường cấp ba</string>
    <string name="str_fra_register_content_candidate_tv_title">Thí sinh</string>
    <string name="str_fra_register_content_info_til_birth_default">dd/MM/yyyy</string>
    <string name="str_fra_register_content_info_til_birth_hint">Ngày sinh</string>
    <string name="str_fra_register_content_info_til_birth_text">Chọn ngày sinh</string>
    <string name="str_fra_register_content_info_til_email_hint">Email</string>
    <string name="str_fra_register_content_info_til_first_hint">Họ</string>
    <string name="str_fra_register_content_info_til_last_hint">Tên</string>
    <string name="str_fra_register_content_info_til_town_hint">Quê quán</string>
    <string name="str_fra_register_content_info_tv_title">Thông tin của bạn</string>
    <string name="str_fra_register_content_lecturer_til_faculty_hint">Khoa</string>
    <string name="str_fra_register_content_lecturer_til_identity_hint">Mã giảng viên</string>
    <string name="str_fra_register_content_lecturer_tv_title">Giảng viên</string>
    <string name="str_fra_register_content_password_til_password">Mật khẩu</string>
    <string name="str_fra_register_content_password_til_repass">Nhập lại mật khẩu</string>
    <string name="str_fra_register_content_password_tv_title">Đặt mật khẩu</string>
    <string name="str_fra_register_content_role_btn_candidate">Thí sinh</string>
    <string name="str_fra_register_content_role_btn_lecturer">Giảng viên</string>
    <string name="str_fra_register_content_role_btn_student">Sinh viên</string>
    <string name="str_fra_register_content_role_tv_title">Bạn là ai?</string>
    <string name="str_fra_register_content_student_rb_graduated">Đã tốt nghiệp</string>
    <string name="str_fra_register_content_student_rb_not_graduated">Chưa tốt nghiệp</string>
    <string name="str_fra_register_content_student_til_class_hint">Mã lớp</string>
    <string name="str_fra_register_content_student_til_enrollment_hint">Khóa</string>
    <string name="str_fra_register_content_student_til_faculty_hint">Khoa</string>
    <string name="str_fra_register_content_student_til_identity_hint">Mã số sinh viên</string>
    <string name="str_fra_register_content_student_til_major_hint">Ngành</string>
    <string name="str_fra_register_content_student_tv_graduated">Trạng thái học tập:</string>
    <string name="str_fra_register_content_student_tv_title">Sinh viên</string>
    <string name="str_fra_register_dialog_enrollment_year_content">Chọn một trong các khóa học sau:</string>
    <string name="str_fra_register_dialog_enrollment_year_title">Chọn Khóa</string>
    <string name="str_fra_register_dialog_enrollment_year_neutral">Hủy</string>
    <string name="str_fra_register_dialog_enrollment_year_positive">OK</string>
    <string name="str_fra_register_dialog_faculty_content">Chọn một trong các khoa sau:</string>
    <string name="str_fra_register_dialog_faculty_title">Chọn khoa</string>
    <string name="str_fra_register_dialog_faculty_neutral">Hủy</string>
    <string name="str_fra_register_dialog_faculty_positive">OK</string>
    <string name="str_fra_register_dialog_major_content">Chọn một trong các ngành sau:</string>
    <string name="str_fra_register_dialog_major_title">Chọn Ngành</string>
    <string name="str_fra_register_dialog_major_plan_title">Ngành Đăng ký:</string>
    <string name="str_fra_register_dialog_major_neutral">Hủy</string>
    <string name="str_fra_register_dialog_major_positive">OK</string>
    <string name="str_fra_register_error_email">Email không hợp lệ</string>
    <string name="str_fra_register_error_empty">Thông tin bắt buộc</string>
    <string name="str_fra_register_error_min">Yêu cầu tối thiểu 2 ký tự</string>
    <string name="str_fra_register_error_pass_digit">Mật khẩu phải có ít nhất 1 ký tự số</string>
    <string name="str_fra_register_error_pass_lower">Mật khẩu phải có ít nhất 1 chữ thường</string>
    <string name="str_fra_register_error_pass_match">Mật khẩu không khớp</string>
    <string name="str_fra_register_error_pass_size">Mật khẩu tối thiểu phải có 8 ký tự</string>
    <string name="str_fra_register_error_pass_special">Mật khẩu phải có ít nhất 1 ký tự đặc biệt</string>
    <string name="str_fra_register_error_pass_upper">Mật khẩu phải có ít nhất 1 chữ hoa</string>
    <string name="str_fra_register_top_tb_item">Bước tiếp theo</string>
    <string name="str_fra_register_top_tb_title">Tạo tài khoản</string>
    <string name="str_fra_request_tv_empty">Không có yêu cầu kết bạn</string>
    <string name="str_ite_fra_community_tv_empty">Bạn chưa tham gia nhóm nào</string>
    <string name="str_ite_fra_request_tv_number">%d bạn chung</string>
    <string name="str_ite_fra_request_tv_number_empty">Không có bạn chung</string>
    <string name="str_ite_post_body_tv_quantity">%1$d/%2$d</string>
    <string name="str_ite_post_interact_btn_comment">%d bình luận</string>
    <string name="str_ite_post_interact_btn_like">%d lượt thích</string>
    <string name="str_fra_create_post_tiet">Nhập nội dung bài viết</string>
    <string name="str_remove_item_create_post">Đã xóa file phương tiện</string>
    <string name="str_fra_create_post_btn_new">Thêm hình ảnh/video mới</string>
    <string name="str_fra_settings_tv_hint_profile">Xem thêm thông tin</string>
    <string name="str_fra_settings_btn_change_avatar">Đổi ảnh đại diện</string>
    <string name="str_fra_settings_btn_change_password">Đổi mật khẩu</string>
    <string name="str_fra_settings_tv_name">%1$s %2$s</string>
    <string name="str_fra_profile_tv_title_post">Bài viết của tôi</string>
    <string name="str_fra_community_tab_title_friends">Bạn bè</string>
    <string name="str_fra_community_tab_title_request">Yêu cầu</string>
    <string name="str_registered_successfully">Đăng ký thành công. Vui lòng đăng nhập</string>
    <string name="str_registered_failed_email">Email đã được đăng ký tài khoản</string>
    <string name="str_logout_success">Đã đăng xuất tài khoản</string>
    <string name="str_error_logout">Có lỗi xảy ra! Vui lòng thử lại sau</string>
    <string name="tra_register_content_role_candidate">RegisterContentRoleCandidate</string>
    <string name="tra_register_content_role_lecturer">RegisterContentRoleLecturer</string>
    <string name="tra_register_content_role_student">RegisterContentRoleStudent</string>
    <string name="tra_settings_profile_avatar">SettingsProfileAvatar</string>
    <string name="tra_settings_profile_name">SettingsProfileName</string>
    <string name="validate_msg_field_not_empty">(*) Giá trị của trường này không được rỗng</string>
    <string name="validate_msg_field_required">(*) Trường này không được để trống</string>
    <string name="validate_msg_pwd_field_min_length">(*) Độ dài chuỗi phải lớn hơn hoặc bằng 8</string>
    <string name="validate_msg_field_max_length_256">(*) Độ dài tối đa của chuỗi là 256 kí tự</string>
    <string name="validate_msg_field_email_invalid">(*) Địa chỉ email không khả dụng</string>
    <string name="has_error">Đã xảy ra lỗi. Vui lòng thử lại sau!</string>
    <string name="response_request_timeout">Yêu cầu hết hạn, vui lòng thử lại!</string>
    <string name="response_connection_timeout">Kết nối hết hạn, vui lòng thử lại!</string>
    <string name="response_network_problem">Kết nối mạng có vấn đề, vui lòng thử lại!</string>
    <string name="response_request_canceled">Yêu cầu bị hủy, vui lòng thử lại!</string>
    <string name="loading">Đang tải</string>
    <string name="date_util_term_less">Chưa đầy</string>
    <string name="date_util_term_a">1</string>
    <string name="date_util_term_an">1</string>
    <string name="date_util_unit_second">giây</string>
    <string name="date_util_unit_seconds">giây</string>
    <string name="date_util_unit_minute">phút</string>
    <string name="date_util_unit_minutes">phút</string>
    <string name="date_util_unit_hour">giờ</string>
    <string name="date_util_unit_hours">giờ</string>
    <string name="date_util_unit_day">ngày</string>
    <string name="date_util_unit_days">ngày</string>
    <string name="date_util_unit_month">tháng</string>
    <string name="date_util_unit_months">tháng</string>
    <string name="date_util_unit_year">năm</string>
    <string name="date_util_unit_years">năm</string>
    <string name="date_util_prefix_lt">chưa đầy 1</string>
    <string name="date_util_prefix_about">khoảng</string>
    <string name="date_util_prefix_over">hơn</string>
    <string name="date_util_prefix_almost">gần</string>
    <string name="date_util_suffix">trước</string>
    <string name="str_fra_profile_tv_title_info"><u>Thông tin người dùng:</u></string>
    <string name="str_fra_profile_tv_title_role">Thông tin chi tiết</string>
    <string name="str_dialog_change_username_title">Đổi Username</string>
    <string name="str_dialog_change_username_hint">Nhập Username</string>
    <string name="str_dialog_change_username_save">Lưu</string>
    <string name="str_dialog_change_username_cancel">Hủy</string>
    <string name="str_dialog_confirm_delete_post_title">Xóa bài viết</string>
    <string name="str_dialog_confirm_delete_post_content">Bạn có chắc chắn muốn xóa bài viết này không?</string>
    <string name="str_dialog_confirm_delete_post_confirm">Xóa</string>
    <string name="str_dialog_confirm_delete_post_cancel">Hủy</string>
</resources>