<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".feature_register.presentation.element.partial.RegisterFragmentContentRole">

        <LinearLayout
            android:id="@+id/linear_layout_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:text="@string/str_fra_register_content_role_tv_title"
                android:textAppearance="?attr/textAppearanceHeadlineMedium" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_student"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginBottom="24dp"
                android:text="@string/str_fra_register_content_role_btn_student"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_lecturer"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginBottom="24dp"
                android:text="@string/str_fra_register_content_role_btn_lecturer"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_candidate"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:text="@string/str_fra_register_content_role_btn_candidate"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>