<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".feature_login.presentation.element.LoginFragment">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/brand"
                layout="@layout/fragment_login_brand" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:hint="@string/str_act_login_til_email_hint"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ico_envelope_regular">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/str_act_login_til_password_hint"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ico_lock_keyhole_regular">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/str_act_login_btn_login"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_forgot"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="36dp"
                android:background="@android:color/transparent"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/str_act_login_btn_forgot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/str_act_login_btn_register"
                android:textAllCaps="true"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>