<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:elevation="@dimen/ele_level_3"
        android:minWidth="280dp"
        android:padding="24dp">

        <LinearLayout
            android:id="@+id/linear_layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_anchor="@id/linear_layout_button"
            app:layout_anchorGravity="top|center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/str_dialog_confirm_delete_post_title"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                android:textColor="?attr/colorOnSurface" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_view_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:scrollbars="none">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_view_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_dialog_confirm_delete_post_content"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:textColor="?attr/colorOnSurfaceVariant" />

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_neutral"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/str_dialog_confirm_delete_post_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_positive"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/str_dialog_confirm_delete_post_confirm"
                android:textColor="?attr/colorError" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>